--- a/sip7Result.html
+++ b/sip7Result.html
@@ -113,7 +113,7 @@
         <canvas id="barChart"></canvas>
     </div>
 
-    <a href="/DashBoard/Sip/sip7.html" class="back-button">Calculate Again</a>
+    <a href="sip7.html" class="back-button">Calculate Again</a>
 
     <script>
         // Function to format numbers as per Hindu number system
